# kotel_arduino

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autorun.script  basic_script.txt  eeprom.script  restart.script  test_serial.txt  testweb.script  trayopen.script
src/: DotMatrix
src/DotMatrix/: DotMatrix.cpp
src/DotMatrix_old/: DotMatrix.cpp  DotMatrix.h
src/SimpleDallasTemp/: SimpleDallasTemp.cpp  SimpleDallasTemp.h
src/WifiTCP/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  UDPClient.cpp  UDPClient.h  WifiTCP.cpp  WifiTCP.h
src/eeprom/: generic_eeprom.h  r4eeprom.h
src/eeprom/test/: eeprom_test.cpp
src/emul/: CMakeLists.txt  DataFlashBlockDevice.h  DotMatrix.cpp  Matrix_MAX7219_emul.cpp  OneWire.h  WDT.h  WiFiS3.h  WifiTCP.h  emul.cpp  simul_matrix.h  temp_sim.cpp
src/emul/api/: Client.h  Common.h
src/emul/wifi/: UDPClient.h  WiFiClient.cpp  WiFiClient.h  WiFiS3.cpp  WiFiServer.cpp
src/kotel/: CMakeLists.txt  base64.h  cerpadlo.h  combined_container.h  config.h  constants.h  controller.cpp  controller.h  controller_config.h  display.cpp  display.h  display_control.cpp  display_control.h  fan.h  feeder.cpp  feeder.h  gen_version.cmake  hash_cnt_stream.h  http_server.h  http_utils.h  icons.h  keyboard.h  kotel.cpp  kotel.h  motohodiny.h  motoruntime.cpp  motoruntime.h  network_control.cpp  network_control.h  nonv_storage.h  nonv_storage_def.h  ntp.h  pinread.h  pins.h  podavac.h  print_hlp.h  pump.h  scheduler.h  sensors.h  serial.cpp  (+16 more)
src/libraries/DotMatrix/: DotMatrix.h  bitmap.h  font_5x3.h  font_6p.h
src/libraries/Keyboard1W/: Keyboard1W.h
src/libraries/Matrix_MAX7219/: Matrix_MAX7219.cpp  Matrix_MAX7219.h  bitmap.h  font_6p.h
src/libraries/OneWire/: OneWire.cpp  OneWire.h
src/libraries/SimpleDallasTemp/: SimpleDallasTemp.cpp
src/libraries/WifiTCP/: TCPClient.cpp  (+4 more)
src/tests/: compile.cpp
src/www/: .gitignore  CMakeLists.txt  adv_config.html  adv_config.js  binary_formats.js  bind_device.css  bind_device.html  bind_device.js  chart.css  chart.html  chart.js  code.js  computing.js  config_therm.html  config_therm.js  control_box.css  control_box.html  control_box.js  dashboard.css  dashboard.html  dashboard.js  desktop.js  form_test.html  forms.js  header_status.css  header_status.html  header_status.js  index.body.html  index.html  index_old.html  main.body.html  main.css  main.js  menu_settings.css  menu_settings.html  menu_settings.js  net_config.css  net_config.html  net_config.js  netstat.css  (+23 more)
(+8 files in other folders)
